--- a/index-java.html
+++ b/index-java.html
@@ -113,13 +113,13 @@
                             <div>
                                 <a href="https://github.com/aspose-total">
                                     <h2>Conholdate.Total</h2>
-                                    <span>Product Family</span>
+                                    <span>for Java</span>
                                 </a>
                             </div>
                         </div>
                         <ul>
-                            <li><a href="index-net.html">Conholdate.Total for .NET</a></li>
-                            <li><a href="index-java.html">Conholdate.Total for Java</a></li>
+                            <li><a href="http://aspose.github.io/">Aspose.Total for Java</a></li>
+                            <li><a href="http://groupdocs.github.io/">GroupDocs.Total for Java</a></li>
                         </ul>
                     </div>
                     
